Lotuspetal_Latest_Code

--- a/evd/questionbank/templates/assesment_builder.html
+++ b/evd/questionbank/templates/assesment_builder.html
@@ -221,8 +221,7 @@ div.intro h3{
 <div class="modal fade bd-example-modal-lg" id="preview_modal">
     <button type="button" class="btn btn-default pull-right" data-dismiss="modal">X</button>
     <h1><a class="navbar-brand scroll" href="/?home=true">
-        <img class="logo_img_css" src="/static/images/evidyalogo.jpg" alt="evidyaloka logo" width="55px" height="51px" style="margin-top:-14px;border-radius:100%;display:inline;position:absolute"/>
-        <img class="logo_img_css1" src="/static/images/evidyaban_1000x250.png" alt="evidyaloka banner" height="75px" class="banner_large" width="275px" style="margin-left:50px;margin-top:-25px;float:left;display:inline;position:absolute">
+        <img class="logo_img_css" src="/static/images/LPF.jpg" alt="evidyaloka logo" width="100px" height="51px" style="margin-top:-14px;border-radius:100%;display:inline;position:absolute"/>
     </a></h1>
     <br>
     <br>
