--- a/evd/web/templates/contact_us.html
+++ b/evd/web/templates/contact_us.html
@@ -104,10 +104,11 @@
                 <div class="work-space-map">
                     <div class='register'>
                         <h4 class="blue">Registered Office:</h4>
-                        <p>eVidyaloka Trust,</p>
-                        <p>10 B, 1st A Main, MCHS Colony,</p>
-                        <p>5th Block, Sector 6,  HSR Layout,</p>
-                        <p> Bengaluru-560102 </p>
+                        <p>Lotus Petal Foundation</p>
+                        Gali No. 5, Village Silokhera,<br>
+Plot No.3 South City -1 Market,<br>
+Beside Unitech House,<br>
+Gurugram-122002 Haryana (India)
                     </div>
                     <div class="map">
                         <iframe width="425" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d1944.4405773758815!2d77.6257066!3d12.9153592!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1427238005728"></iframe>
