--- a/evd/web/templates/home.html
+++ b/evd/web/templates/home.html
@@ -622,7 +622,7 @@
     <div id="header">
         <div class="inner clearfix">
             <div class="nav_left">
-                <a href="/?home=true"><img src="/static/images/evidyalogo.png"/></a>
+                <a href="/?home=true"><img src="/static/images/LPF.jpg"/></a>
                 <h1 id="logo"><a href="/?home=true">eVidyaloka</a></h1>
                 <h3>To Educate-Anywhere Anytime</h3>
             </div>
