--- a/evd/web/templates/new_base.html
+++ b/evd/web/templates/new_base.html
@@ -7,7 +7,7 @@
 
 
 
-      <meta name="description" content="eVidyaloka education for all network (eVean) Foundation is a not for profit organisation, a Section 8 company under Companies Act, 2013. A social enterprise evolved from the model of eVidyaloka towards transforming the educational landscape of rural India. ">
+      <meta name="description" content="Lotus Petal Foundation is a non-profit organisation founded in November 2011 with the primary objective to create equal opportunities for underprivileged children living in urban and semi-urban areas.To nurture individuals and bring about a transformation in their lives through education.">
       <meta name="keywords" content="evidyaloka, children, rural school, learn, rural education, children education, teachers, volunteers, volunteers to teach, volunteer teachers, education, student education, online teaching, digital classrooms, virtual teaching, ngo, free education, remote village education, internet education, teaching channel, sponsor for education, sponsor for school, donate for school, donate for education"/>
       <meta charset="utf-8">
 
@@ -18,7 +18,7 @@
       <link rel="stylesheet" media="screen" href="/static/css/fonts.css" />
       <link rel="stylesheet" media="all" href="/static/css/home_new.min.css" />
       <link rel="stylesheet" media="all" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css" />
-      <link rel="shortcut icon" type="image/x-icon" href="/static/images/evidyalogo.png" />
+      <link rel="shortcut icon" type="image/x-icon" href="/static/images/LPF.jpg" />
    </head>
    {% endblock %}
  {% block body %}
@@ -32,7 +32,7 @@
             <ul class="global_nav span20">
                <!--<li><a href=""><span>Home</span></a></li>-->
                <li class=""><a data-toggle="modal" data-target="#login-test"><span>Home</span></a></li>
-               <li><a href="/about/"><span>About Us</span></a></li>
+               <li><a href="https://www.lotuspetalfoundation.org/about-us/"><span>About Us</span></a></li>
                <li class=""><a data-toggle="modal" data-target="#login-modal"><span>Sign up as a Volunteer</span></a></li>
             </ul>
          </nav>
