--- a/evd/web/templates/new_base_1.html
+++ b/evd/web/templates/new_base_1.html
@@ -4,7 +4,7 @@
 
 {% block head_styles %}
     <!-- meta yet to be updated from evidyaloka -->
-    <meta name="description" content="eVidyaloka education for all network (eVean) Foundation is a not for profit organisation, a Section 8 company under Companies Act, 2013. A social enterprise evolved from the model of eVidyaloka towards transforming the educational landscape of rural India. ">
+    <meta name="description" content="Lotus Petal Foundation is a non-profit organisation founded in November 2011 with the primary objective to create equal opportunities for underprivileged children living in urban and semi-urban areas.To nurture individuals and bring about a transformation in their lives through education.">
     <meta name="keywords" content="evidyaloka, children, rural school, learn, rural education, children education, teachers, volunteers, volunteers to teach, volunteer teachers, education, student education, online teaching, digital classrooms, virtual teaching, ngo, free education, remote village education, internet education, teaching channel, sponsor for education, sponsor for school, donate for school, donate for education"/>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,9 +33,9 @@
     <link rel="stylesheet" href="/static/css/colorbox.css"/>
     <!------------------------------------Inserted block ------------------------->
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-    <link rel="shortcut icon" href="/static/images/evidyalogo.png">
+    <link rel="shortcut icon" href="/static/images/LPF.jpg">
 
-    <title>eVidyaloka</title>
+    <title>LPF</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/static/css_new/bootstrap.css" rel="stylesheet">
@@ -2102,11 +2102,11 @@ font-size:18px;
                     <div class="col-lg-12">
                       <div class="col-sm-3 col-md-4">
                         <div class="footer-logo">
-                          <h3>eVean Foundation</h3>
-                          <p>10 B, 1st A Main, MCHS Colony<br>5th Block, Sector 6, HSR Layout,<br/>Bangalore-560102</p>
-                          <p class="muted">© eVean Foundation</p>
-                          <a href="/policies_terms_conditions/">Terms of Service</a>
-                          <a href="/policies/">Privacy</a>
+                          <h3>Lotus Petal Foundation</h2>
+                          <p>Gali No. 5, Village Silokhera,<br>
+                            Plot No.3 South City -1 Market,<br>
+                            Beside Unitech House,<br>
+                            Gurugram-122002 Haryana (India)</p>
                         </div>
                       </div>
                       <div class="col-sm-3 col-md-3">
