--- a/evd/web/templates/new_base_temp.html
+++ b/evd/web/templates/new_base_temp.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="eVidyaloka education for all network (eVean) Foundation is a not for profit organisation, a Section 8 company under Companies Act, 2013. A social enterprise evolved from the model of eVidyaloka towards transforming the educational landscape of rural India. ">
+    <meta name="description" content="Lotus Petal Foundation is a non-profit organisation founded in November 2011 with the primary objective to create equal opportunities for underprivileged children living in urban and semi-urban areas.To nurture individuals and bring about a transformation in their lives through education.">
     <meta name="keywords" content="evidyaloka, children, rural school, learn, rural education, children education, teachers, volunteers, volunteers to teach, volunteer teachers, education, student education, online teaching, digital classrooms, virtual teaching, ngo, free education, remote village education, internet education, teaching channel, sponsor for education, sponsor for school, donate for school, donate for education"
     />
     <meta name="author" content="">
@@ -53,9 +53,9 @@
     <!-- end facebook  meta -->
 
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-    <link rel="shortcut icon" href="/static/images/evidyalogo.png">
+    <link rel="shortcut icon" href="/static/images/LPF.jpg">
 
-    <title>eVidyaloka</title>
+    <title>LPF</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/static/css_new/bootstrapv3.3.6.min.css" rel="stylesheet">
@@ -610,8 +610,7 @@
               </button>
                         <h1>
                             <a class="navbar-brand scroll" href="/?home=true">
-                                <img class="logo_img_css" src="/static/images/evidyalogo.jpg" alt="evidyaloka logo" width="55px" height="50px" style="margin-top:-14px;border-radius:100%;display:inline;position:absolute" />
-                                <img class="logo_img_css1" src="/static/images/evidyaban_1000x250.png" alt="evidyaloka banner" height="75px" class="banner_large" width="275px" style="margin-left:50px;margin-top:-25px;float:left;display:inline;position:absolute">
+                                <img class="logo_img_css" src="/static/images/LPF.jpg" alt="evidyaloka logo" width="100px" height="50px" style="margin-top:-14px;border-radius:100%;display:inline;position:absolute" />
                             </a>
                         </h1>
                         {% if user.is_authenticated %}
@@ -632,7 +631,7 @@
                                 <a href="#" class="dropdown-toggle text_color" data-toggle="dropdown" role="button" aria-expanded="false">About<span class="caret"></span></a>
                                 <ul class="dropdown-menu dropdown_css border_css" role="menu">
                                     <li class="li__bgcolor border_radius"><a class="href_color" href='https://www.sunbird.org/about-us'>Sunbird Overview</a></li>
-                                    <li class="li__bgcolor border_radius"><a class="href_color" href='/about/'>eVidyaloka Overview</a></li>
+                                    <li class="li__bgcolor border_radius"><a class="href_color" href='https://www.lotuspetalfoundation.org/about-us/'>Lotus Petal Foundation Overview</a></li>
 
                                 </ul>
                             </li>
@@ -1158,11 +1157,11 @@
     <div class="col-lg-12">
       <div class="col-sm-3 col-md-4">
         <div class="footer-logo">
-          <h3>eVean Foundation</h2>
-          <p>10 B, 1st A Main, MCHS Colony<br>5th Block, Sector 6, HSR Layout,<br/>Bangalore-560102</p>
-          <p class="muted">© eVean Foundation</p>
-          <a href="/policies_terms_conditions/">Terms of Service</a>
-          <a href="/policies/">Privacy</a>
+          <h3>Lotus Petal Foundation</h2>
+            Gali No. 5, Village Silokhera,<br>
+Plot No.3 South City -1 Market,<br>
+Beside Unitech House,<br>
+Gurugram-122002 Haryana (India)
         </div>
       </div>
       <div class="col-sm-3 col-md-3">
