--- a/evd/web/templates/base2.html
+++ b/evd/web/templates/base2.html
@@ -4,7 +4,7 @@
 
 {% block head_styles %}
   <!-- meta yet to be updated from evidyaloka -->
-  <meta name="description" content="eVidyaloka education for all network (eVean) Foundation is a not for profit organisation, a Section 8 company under Companies Act, 2013. A social enterprise evolved from the model of eVidyaloka towards transforming the educational landscape of rural India. ">
+  <meta name="description" content="Lotus Petal Foundation is a non-profit organisation founded in November 2011 with the primary objective to create equal opportunities for underprivileged children living in urban and semi-urban areas.To nurture individuals and bring about a transformation in their lives through education.">
   <meta name="keywords" content="evidyaloka, children, rural school, learn, rural education, children education, teachers, volunteers, volunteers to teach, volunteer teachers, education, student education, online teaching, digital classrooms, virtual teaching, ngo, free education, remote village education, internet education, teaching channel, sponsor for education, sponsor for school, donate for school, donate for education"/>
   <meta charset="utf-8">
   <link href="/static/images/favicon.ico" type="image/x-icon" rel="icon" />
@@ -872,8 +872,8 @@
     <div id="header">
         <div class="inner clearfix">
             <div class="nav_left">
-                <a href="/homepage"><img src="/static/images/evidyalogo.png"/></a>
-                <h1 id="logo"><a href="/homepage">eVidyaloka</a></h1>
+                <a href="/homepage"><img src="/static/images/LPG.jpg"/></a>
+                <h1 id="logo"><a href="/homepage">LPF</a></h1>
                 <h3>To Educate-Anywhere Anytime</h3>
             </div>
             <div class="nav_right">
