--- a/evd/web/templates/breadcrumb_widget_new.html
+++ b/evd/web/templates/breadcrumb_widget_new.html
@@ -845,16 +845,6 @@
                         <a href="/admin/web/course/add/" target="_blank" class="btn add_course_dj">+</a>
                     </li>
                     <div class="" style="display: grid; grid-auto-flow: column dense;grid-column-gap: -15px ">
-                        <!--<li>
-                            <p style="font-weight: bold;">Class Type:</p>
-                            <select multiple="multiple" id="classType" style="float:left; width:300px">
-                                {% for classtype in classtype %}
-                                    <option value="{{ classtype.id }}">{{ classtype.title }}</option>
-                                {% endfor %}
-                            </select>
-                                <a href="/admin/web/classtype/add/" class="btn add_topic_dj" target="_blank" style="margin-left:10px;width:20px;height:20px;line-height:18px;float:left;">+</a>
-                        </li>-->
-
                         <li>
                             <p style="font-weight: bold;">Program Type:</p>
                             <select name="program_type" required>
@@ -866,13 +856,19 @@
                                 <option value="5">Digital School</option>
                             </select>
                         </li>
-                        
                         <li>Batch Type: 
                             <select name="batch">
                                 <option selected value="0">None</option>
                                 <option value="1">Batch-1</option>
                                 <option value="2">Batch-2</option>
                                 <option value="3">Batch-3</option>
+                                <option value="4">Batch-4</option>
+                                <option value="5">Batch-5</option>
+                                <option value="6">Batch-6</option>
+                                <option value="7">Batch-7</option>
+                                <option value="8">Batch-8</option>
+                                <option value="9">Batch-9</option>
+                                <option value="10">Batch-10</option>
                             </select>
                         </li>
                     </div>
@@ -917,7 +913,6 @@
                     </select>
                     </li>
                     <input type="hidden" name="students" />
-                    <input type="hidden" name="classtype"/>
                     <input type="hidden" name="planned_topics" />
                     <input type="hidden" name="center_id" value="{{ center_id }}" />
                 </ul>
