--- a/evd/web/templates/home_new.html
+++ b/evd/web/templates/home_new.html
@@ -690,8 +690,8 @@ p.lob {
     <div id="header">
         <div class="inner clearfix">
             <div class="nav_left">
-                <a href="/?home=true"><img alt="eVidyaloka Logo" src="/static/images/evidyalogo.png"/></a>
-                <h1 id="logo"><a href="/?home=true">eVidyaloka</a></h1>
+                <a href="/?home=true"><img alt="eVidyaloka Logo" src="/static/images/LPF.jpg"/></a>
+                <h1 id="logo"><a href="/?home=true">LPF</a></h1>
                 <h3>To Educate-Anywhere Anytime</h3>
             </div>
             <div class="nav_right">
