--- a/evd/web/templates/new_about_us_temp.html
+++ b/evd/web/templates/new_about_us_temp.html
@@ -201,7 +201,7 @@ top: 6.5%;
                       <img
                         class="img_css"
                         alt="evidyaloka logo"
-                        src="/static/images/evidyalogo.jpg"
+                        src="/static/images/LPF.jpg"
                         width="55px"
                         height="50px"
                         style="border-radius: 100%"
@@ -249,8 +249,8 @@ top: 6.5%;
                               <a class="dropdown-item" href="https://www.sunbird.org/about-us"
                                 >Sunbird Overview</a
                               >
-                              <a class="dropdown-item" href="/about/"
-                                >eVidyaloka Overview</a
+                              <a class="dropdown-item" href="https://www.lotuspetalfoundation.org/about-us/"
+                                >Lotus Petal Foundation Overview</a
                               >
                              
                             </div>
