--- a/evd/web/templates/enrollStudent.html
+++ b/evd/web/templates/enrollStudent.html
@@ -49,6 +49,7 @@
             <div class="col-md-12">
                 <br/>
                 <form action="/v2/save_enrollStudent/" id="formId" method="post" enctype="multipart/form-data">
+
                     {% csrf_token %} {% if message == "Student already exists!"%}
                     <div class="row">
                         <div class="alert alert-danger alert-dismissable" style="padding-top: 5px; padding-bottom: 5px; margin-right: 0px; margin-left: 0px;">
@@ -109,7 +110,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-4">
-                                    <select name="gender" class="form-control" required="required">
+                                    <select name="gender" id="genderId" class="form-control" required="required">
 										<option value="">Select Gender</option>
 										<option value="Boy" {% if student.gender == 'Boy' or student.gender == 'boy' or student.gender == 'Male' or student.gender == 'M' or student.gender == 'b' %}selected="selected"{% endif %}>Boy</option>
 										<option value="Girl" {% if student.gender == 'Girl' or student.gender == 'girl' or student.gender == 'Female' or student.gender == 'F' or student.gender == 'g' %}selected="selected"{% endif %}>Girl</option>
@@ -140,7 +141,7 @@
                             <div class="row">
                                 <div class="col-md-4"></div>
                                 <div class="col-md-8">
-                                    <span id="phone_no" style="color: red; font-size: 12px;"></span>
+                                    <span style="color: red; font-size: 12px;"></span>
                                     <input oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);" type="number" maxlength="13" id="phone_no" name="phone_no" class="form-control" value="{{student.phone}}" placeholder="Phone no " required="required"
                                         onkeyup="return nameCheck();" />
                                 </div>
@@ -696,6 +697,25 @@
                 });
             }
         });
+
+
+
+        
+
+            // Function to set form field values
+            function setFormFieldValue(fieldName, value) {
+                var element = document.getElementById(fieldName);
+                if (value) {
+                    element.value = value;
+                }
+            }
+        
+            // Loop through the 'allData' object properties and set form values
+            {% for key, value in allData.items %}
+                setFormFieldValue("{{ key }}", "{{ value }}");
+            {% endfor %}
+            
+
     </script>
 
 </body>
